--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,49 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Trajectories = "2c80a279-213e-54d7-a557-e9a14725db56"
 
 [compat]
-julia = "1"
+julia = "1.9"
+ArchGDAL = "0.10"
+Arpack = "0.5"
+Arpack_jll = "3.5.1"
+BlockDiagonals = "0.2"
+Cairo = "1.1"
+Crayons = "4.1"
+DataFrames = "1.7"
+DelimitedFiles = "1.9"
+DimensionalData = "0.29"
+Distances = "0.10"
+Distributions = "0.25"
+DynamicIterators = "0.4"
+EzXML = "1.2"
+GDAL = "1.10"
+GLM = "1.9"
+GaussianDistributions = "0.5"
+GaussianRandomFields = "2.2"
+GeoDataFrames = "0.3"
+GeoFormatTypes = "0.4"
+Glob = "1.3"
+HDF5 = "0.17"
+HTTP = "1.10"
+IJulia = "1.27"
+JSON = "0.21"
+Kalman = "0.1"
+LinearAlgebra = "1.9"
+Logging = "1.9"
+NaNStatistics = "0.6"
+Nullables = "1.0"
+Optim = "1.12"
+Plots = "1.40"
+ProgressMeter = "1.10"
+Rasters = "0.14"
+Revise = "3.7"
+Sobol = "1.5"
+SparseArrays = "1.10"
+Statistics = "1.10"
+StatsBase = "0.34"
+StatsModels = "0.7"
+Suppressor = "0.2"
+Test = "1.9"
+Trajectories = "0.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
