--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DynamicIterators = "6c76993d-992e-5bf1-9e63-34920a5a5a38"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
@@ -28,15 +29,19 @@ Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Kalman = "d59c0ba6-2ef2-5409-8dc5-1fd9a2b46832"
+KernelFunctions = "ec8451be-7e33-11e9-00cf-bbf324bd1392"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 Nullables = "4d1e1d77-625e-5b40-9113-a560ec7a8ecd"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Sobol = "ed01d8cd-4d21-5b2a-85b4-cc3bdc58bad4"
@@ -49,7 +54,6 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Trajectories = "2c80a279-213e-54d7-a557-e9a14725db56"
 
 [compat]
-julia = "1.9"
 ArchGDAL = "0.10"
 Arpack = "0.5"
 Arpack_jll = "3.5.1"
@@ -60,6 +64,7 @@ DataFrames = "1.7"
 DelimitedFiles = "1.9"
 DimensionalData = "0.29"
 Distances = "0.10"
+Distributed = "1.11.0"
 Distributions = "0.25"
 DynamicIterators = "0.4"
 EzXML = "1.2"
@@ -73,15 +78,19 @@ Glob = "1.3"
 HDF5 = "0.17"
 HTTP = "1.10"
 IJulia = "1.27"
+Interpolations = "0.15.1"
 JSON = "0.21"
 Kalman = "0.1"
+KernelFunctions = "0.10.65"
 LinearAlgebra = "1.9"
 Logging = "1.9"
+MultivariateStats = "0.10.3"
 NaNStatistics = "0.6"
 Nullables = "1.0"
 Optim = "1.12"
 Plots = "1.40"
 ProgressMeter = "1.10"
+Random = "1.11.0"
 Rasters = "0.14"
 Revise = "3.7"
 Sobol = "1.5"
@@ -92,6 +101,7 @@ StatsModels = "0.7"
 Suppressor = "0.2"
 Test = "1.9"
 Trajectories = "0.2"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
